--- a/styles/_variables.scss
+++ b/styles/_variables.scss
@@ -690,7 +690,7 @@ $theme-colors: map-merge(
 //
 //$nav-link-padding-y:                .5rem !default;
 //$nav-link-padding-x:                1rem !default;
-//$nav-link-disabled-color:           $gray-600 !default;
+$nav-link-disabled-color:           $gray-400;
 //
 //$nav-tabs-border-color:             $gray-300 !default;
 //$nav-tabs-border-width:             $border-width !default;
