--- a/styles/css/main.css
+++ b/styles/css/main.css
@@ -5748,13 +5748,22 @@ html, body {
 
 .path {
   font-weight: 400;
-  font-size: 10px;
+  font-size: 12px;
+  line-height: 5px;
   color: #9fa5ad;
-  line-height: 12px;
+  background-color: #fff;
   padding-bottom: 15px;
 }
 .path em {
+  font-weight: 700;
   font-style: normal;
+  color: #000;
+}
+.path a {
+  color: #000;
+  text-decoration: underline;
+}
+.path a:hover {
   color: #0062ff;
 }
 
@@ -5773,13 +5782,15 @@ html, body {
 }
 
 nav {
-  font-size: 12px;
-  line-height: 5px;
+  background-color: #fff;
   padding-bottom: 15px;
 }
 nav a {
+  font-size: 12px;
+  line-height: 10px;
+  text-decoration: underline;
   color: #000;
-  margin: 0 0 0 -1em;
+  margin: 0 0 0 -0.9em;
 }
 nav a:hover {
   color: #0062ff;
