made non-links in the nav have same alignment as links

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -1,5 +1,5 @@
 $font-stack: 'IBM Plex Mono', Consolas, Monaco, Courier, monospace;
-$font-size: 12px;
+$font-size: 10px;
 
 html {
   width: 60%;
@@ -12,9 +12,13 @@ html, body {
   font-size: $font-size;
 }
 
+p {
+  padding-bottom: 0.3em; 
+}
+
 .path {
   font-weight: 400;
-//  font-size: 1.2 * $font-size;
+  font-size: 1.2 * $font-size;
   line-height: 0.5 * $font-size;
   color: $gray-400;
   background-color: $white;
@@ -55,9 +59,19 @@ html, body {
 nav {
   background-color: $white;
   padding-bottom: 1.5 * $font-size;
-//  font-size: 1.2 * $font-size;
+  font-size: 1.2 * $font-size;
   line-height: $font-size;
-  margin: 0 0 0 -0.9em;
+  
+  li {
+    margin: 0 0 0 -0.9em;
+    display: block;
+    padding: 0.5rem 1rem;
+  }
+  
+  .nav-link {
+    display: block;
+    padding: 0;
+  }
 
   a {
     text-decoration: underline;
