fixed home link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
         <!-- fake breadcrumbs goes here -->
         <div class="col">
-            <div class="path">users\<em><a href="index.html">calebng</a></em></div>
+            <div class="path">users\<em><a href="/index.html">calebng</a></em></div>
         </div>
 
         <!-- column break -->
