--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,20 @@
 <!-- navigation bar -->
-<div class="col-sm-12 col-md-2">
+<div class="col-sm-12 col-lg-3">
+
+  <!-- hire me or action card -->
+  <!-- hidden on mobile devices -->
+  <!-- <div class="row show-on-desktop">
+    <div class="col-lg-12">
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">got a job?</h5>
+          <p class="card-text">i'm currently avaiable for hire!</p>
+          <a href="mailto:calebnjw@outlook.com?subject=Job Offer" class="btn btn-outline-primary">hire me!</a>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
   <!-- horizontal when screen is narrow, vertical when wide -->
   <nav class="nav flex-lg-column">
     {% for item in site.data.nav %}
