--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: portfolio
+layout: default
 ---
 <h2>{{ page.title }}</h2>
 <p>{{ page.date | date_to_string }} - {{ page.author }}</p>
