--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -19,16 +19,13 @@
         {% include nav.html %}
 
         <!-- main body container -->
-        <div class="col-sm-12 col-md-10">
-          <!-- main big text content goes here -->
+        <div class="col-sm-12 col-lg-9">
+          <!-- main content goes here -->
           <div class="copy">
             {{ content }}
           </div>
-
-          <!-- secondary / scroll content goes here -->
-          <div>
-          </div>
         </div>
+
       </div>
     </div>
 
