minor aesthetic changes. T_T

--- a/_layouts/double.html
+++ b/_layouts/double.html
@@ -7,9 +7,9 @@
     <div class="container">
       <div class="row">
 
-        <!-- fake breadcrumbs goes here -->
+        <!-- link home goes here -->
         <div class="col">
-            <div class="path">users\<em><a href="/index.html">calebng</a></em></div>
+            <div class="path"><em><a href="/index.html">calebng</a></em></div>
         </div>
 
         <!-- column break -->
@@ -19,20 +19,19 @@
         {% include nav.html %}
 
         <!-- main body container -->
-        <div class="col-sm-12 col-lg-9">
-          <!-- main content goes here -->
+        <main class="col-sm-12 col-lg-9">
           <div class="copy">
+            <!-- main content goes here -->
             {{ content }}
           </div>
 
           <!-- secondary / scroll content goes here -->
           {% include portfolio_content.html %}
-        </div>
 
+          <!-- not so sure footer should even be here... -->
+          {% include footer.html%}
+        </main>
       </div>
     </div>
-
-  {% include footer.html%}
-
   </body>
 </html>
