--- a/assets/styles/_variables.scss
+++ b/assets/styles/_variables.scss
@@ -36,7 +36,7 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #0062ff;
+$blue:    #0043ce;
 $indigo:  #d0b0ff;
 $purple:  #8a3ffc;
 $pink:    #ffa0c2;
