--- a/_layouts/single_alt.html
+++ b/_layouts/single_alt.html
@@ -9,7 +9,7 @@
 
         <!-- fake breadcrumbs goes here -->
         <div class="col">
-            <div class="path">users\<em><a href="/index.html">calebng</a></em></div>
+            <div class="path"><em><a href="/index.html">calebng</a></em></div>
         </div>
 
         <!-- column break -->
@@ -19,15 +19,14 @@
         {% include nav.html %}
 
         <!-- main body container -->
-        <div class="col-sm-12 col-lg-9">
+        <main class="col-sm-12 col-lg-9">
           <!-- main content goes here -->
           {{ content }}
-        </div>
 
+          <!-- not so sure footer should even be here... -->
+          {% include footer.html%}
+        </main>
       </div>
     </div>
-
-  {% include footer.html%}
-
   </body>
 </html>
