--- a/_layouts/single_alt.html
+++ b/_layouts/single_alt.html
@@ -19,13 +19,15 @@
         {% include nav.html %}
 
         <!-- main body container -->
-        <main class="col-sm-12 col-lg-9">
+        <div class="col-sm-12 col-lg-9">
           <!-- main content goes here -->
-          {{ content }}
+          <main>
+            {{ content }}
+          </main>
 
           <!-- not so sure footer should even be here... -->
           {% include footer.html%}
-        </main>
+        </div>
       </div>
     </div>
   </body>
