--- a/_includes/portfolio_content.html
+++ b/_includes/portfolio_content.html
@@ -9,7 +9,7 @@
           <h5 class="card-title">{{ work.title }}</h5>
           <p class="card-subtitle">{{ work.date | date_to_string }}</p>
           <p class="card-text">{{ work.excerpt }}</p>
-          <a href="{{work.url}}" class="btn btn-outline-primary">read more</a>
+          <a href="{{work.url}}" class="btn btn-primary">read more</a>
         </div>
       </div>
     </div>
