--- a/assets/styles/_base.scss
+++ b/assets/styles/_base.scss
@@ -57,12 +57,8 @@ a {
 
 em {
   color: $black;
-  font-weight: 600;
+  font-weight: 500;
   font-style: normal;
-
-  a {
-    text-decoration: none;
-  }
 }
 
 .btn {
@@ -74,11 +70,9 @@ em {
 
 }
 
-.path {
+.home {
   line-height: 0.5 * $font-size;
-  color: $gray-400;
-  background-color: $white;
-  padding-bottom: 1.5 * $font-size;
+  padding-bottom: 1 * $font-size;
 }
 
 .copy {
@@ -89,7 +83,7 @@ em {
   padding-bottom: 5 * $font-size;
 
   a {
-    font-weight: 600;
+    font-weight: 500;
   }
 }
 
@@ -97,7 +91,7 @@ em {
   margin-bottom: 3em;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 991.98px) {
   .show-on-desktop, .hide-on-mobile {
     display: none;
   }
