--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono:300,300i,400,400i,500,500i,600,600i&display=swap" rel="stylesheet">
   <!-- main stylesheet imported with bootstrap scss -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- main custom stylesheet -->
   <link rel="stylesheet" type="text/css" href="/assets/styles/css/main.css">
 
   <title>{{ page.title }}</title>
